--- a/index.html
+++ b/index.html
@@ -114,10 +114,25 @@
             <div id="nuevoHtml" class="toggles d-none">
                 <button id="cerrarHtml" type="button" class="btn btn-light "
                     style="position:absolute; right:6px; top:7px;">x</button>
-                <div class="d-flex flex-column align-items-center">
+                <div class="container d-flex flex-column align-items-center">
 
                     <h2 class="m-5">Productos seleccionados
                     </h2>
+                    <div id="tituloCarrito" class="d-flex flex-row"> 
+                        <div class="hProd">
+                            <h3 class="h5" >Producto</h3>
+                            <div class="linea"></div>
+                        </div>
+                        <div class="hPre">
+                            <h3 class="h5">Precio</h3>
+                            <div class="linea"></div>
+                        </div>
+                        <div class="hCant">
+                            <h3 class="h5">Cantidad</h3>
+                            <div class="linea"></div>
+                        </div>
+                        <h3> </h3>
+                    </div>
 
                     <div class="d-block" id="htmlCarrito">
                     </div>
