--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <title>Productos - Muebles a medida de diseño industrial</title>
 
-    <!-- CDN SweetAlert -->
+    <!-- CDN SweetAlert creado -->
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
