--- a/index.html
+++ b/index.html
@@ -1,144 +1,173 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description"
-        content="Productos. Fabricación y comercialización de muebles a medida de estilo industrial-La Plata">
-    <meta name="keywords" content="MUEBLES INDUSTRIALES, MUEBLES, MUEBLES A MEDIDA, PRODUCTOS, FABRICACION, DISEÑOS">
+    <meta
+      name="description"
+      content="Productos. Fabricación y comercialización de muebles a medida de estilo industrial-La Plata"
+    />
+    <meta
+      name="keywords"
+      content="MUEBLES INDUSTRIALES, MUEBLES, MUEBLES A MEDIDA, PRODUCTOS, FABRICACION, DISEÑOS"
+    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=DM+Mono:wght@500&family=Montserrat&family=Questrial&family=Roboto:wght@500&display=swap"
-        rel="stylesheet">
-    <link rel="icon" href="logos/logo.png">
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=DM+Mono:wght@500&family=Montserrat&family=Questrial&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="logos/logo.png" />
 
-    <script src="https://kit.fontawesome.com/dceefb6e3f.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/dceefb6e3f.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Productos - Muebles a medida de diseño industrial</title>
 
     <!-- CDN SweetAlert creado -->
 
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="css/estilo.css" rel="stylesheet" />
+  </head>
 
-    <link href="css/estilo.css" rel="stylesheet">
-</head>
-
-<body>
+  <body>
     <div>
-        <header>
-            <nav class="encabezado">
-                <div class="logo">
-                    <a><img src="logos/logo.png" alt="Logo" class="imgLogo"></a>
-                </div>
+      <header>
+        <nav class="encabezado">
+          <div class="logo">
+            <a><img src="logos/logo.png" alt="Logo" class="imgLogo" /></a>
+          </div>
 
-                <div class="titulo">
-                    <h1><a>EL GALPON DE NINO </a></h1>
-                </div>
+          <div class="titulo">
+            <h1><a>EL GALPON DE NINO </a></h1>
+          </div>
 
-                <input type="checkbox" class="check" id="check">
-                <label for="check" class="menuH">
-                    <i class="fa-solid fa-bars"></i>
-                </label>
+          <input type="checkbox" class="check" id="check" />
+          <label for="check" class="menuH">
+            <i class="fa-solid fa-bars"></i>
+          </label>
 
-                <ul class="menu">
-                    <li><a>Home</a></li>
-                    <li><a>Insipiración</a></li>
-                    <li><a>Productos</a></li>
-                    <li><a>Conocenos</a></li>
-                    <li><a>Contacto</a></li>
+          <ul class="menu">
+            <li><a>Home</a></li>
+            <li><a>Insipiración</a></li>
+            <li><a>Productos</a></li>
+            <li><a>Conocenos</a></li>
+            <li><a>Contacto</a></li>
 
-                    <li>
-                        <button class="btn" type="button" id="btnHtmlCarrito">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                            </svg> <span class="badge text-bg-danger rounded-circle" id="logoCarrito"></span> </button>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+            <li>
+              <button class="btn" type="button" id="btnHtmlCarrito">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-cart"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
+                  />
+                </svg>
+                <span
+                  class="badge text-bg-danger rounded-circle"
+                  id="logoCarrito"
+                ></span>
+              </button>
+            </li>
+          </ul>
+        </nav>
+      </header>
     </div>
 
     <main>
-        <section style="position: relative;">
-
-            <div id="productos">
-                <div class="container">
-                    <div class="introduccion">
-                        <h2 class="text-center">GALERIA DE PRODUCTOS</h2>
-                        <div class="parrafo">
-                            <p>
-                                Nuestros productos de estilo industrial se realizan a medida para cada cliente. <br>
-                                Estos son algunos de nuestros proyectos. <br> <a>
-                                    Pedí tu presupuesto!</a>
-                            </p>
-                        </div>
-                    </div>
-                        <div id="container" class="row row-cols-2 row-cols-md-4 g-3">                
-                    </div>
-                </div>
+      <section style="position: relative">
+        <div id="productos">
+          <div class="container">
+            <div class="introduccion">
+              <h2 class="text-center">GALERIA DE PRODUCTOS</h2>
+              <div class="parrafo">
+                <p>
+                  Nuestros productos de estilo industrial se realizan a medida
+                  para cada cliente. <br />
+                  Estos son algunos de nuestros proyectos. <br />
+                  <a> Pedí tu presupuesto!</a>
+                </p>
+              </div>
             </div>
-            <div id="nuevoHtml" class="toggles d-none">
-                <button id="cerrarHtml" type="button" class="btn btn-light "
-                    style="position:absolute; right:6px; top:7px;">x</button>
-                <div class="container d-flex flex-column align-items-center">
-                    <h2 class="m-5">Productos seleccionados
-                    </h2>
-                    <div id="tituloCarrito" class="d-flex flex-row"> 
-                        <div class="hProd">
-                            <h3 class="h5" >Producto</h3>
-                            <div class="linea"></div>
-                        </div>
-                        <div class="hPre">
-                            <h3 class="h5">Precio</h3>
-                            <div class="linea"></div>
-                        </div>
-                        <div class="hCant">
-                            <h3 class="h5">Cantidad</h3>
-                            <div class="linea"></div>
-                        </div>
-                        <h3> </h3>
-                    </div>
-                    <div class="d-block" id="htmlCarrito">
-                    </div>
-                </div>
-                <p class="h5 m-3" id="montoTotal"></p>
+            <div id="container" class="row row-cols-2 row-cols-md-4 g-3"></div>
+          </div>
+        </div>
+        <div id="nuevoHtml" class="toggles d-none">
+          <button
+            id="cerrarHtml"
+            type="button"
+            class="btn btn-light"
+            style="position: absolute; right: 6px; top: 7px"
+          >
+            x
+          </button>
+          <div class="container d-flex flex-column align-items-center">
+            <h2 class="m-5">Productos seleccionados</h2>
+            <div id="tituloCarrito" class="d-flex flex-row">
+              <div class="hProd">
+                <h3 class="h5">Producto</h3>
+                <div class="linea"></div>
+              </div>
+              <div class="hPre">
+                <h3 class="h5">Precio</h3>
+                <div class="linea"></div>
+              </div>
+              <div class="hCant">
+                <h3 class="h5">Cantidad</h3>
+                <div class="linea"></div>
+              </div>
+              <h3></h3>
             </div>
-
-        </section>
+            <div class="d-block" id="htmlCarrito"></div>
+          </div>
+          <p class="h5 m-3" id="montoTotal"></p>
+        </div>
+      </section>
     </main>
     <footer id="footer" class="container">
-        <div class="footerR">
-            <a class="logoFooter"><img src="logos/logo.png" alt="Logo" class="imgLogoFooter"></a>
-            <div class="flexFoot">
-                <h3 class="titFooter"> © 2022 Muebles Industriales - El Galpon de Nino<br>
-                    <span class="footerD">Todos los derechos reservados</span>
-                </h3>
-            </div>
+      <div class="footerR">
+        <a class="logoFooter"
+          ><img src="logos/logo.png" alt="Logo" class="imgLogoFooter"
+        /></a>
+        <div class="flexFoot">
+          <h3 class="titFooter">
+            © 2022 Muebles Industriales - El Galpon de Nino<br />
+            <span class="footerD">Todos los derechos reservados</span>
+          </h3>
         </div>
-        <div class="footerL">
-            <h3>Buscanos en Instragram:</h3>
-            <ul>
-                <a href="https://instagram.com/industrial.muebleslp?igshid=YmMyMTA2M2Y="><img
-                        src="logos/logoinstagram.png" alt="Instagram" class="ig"></a>
-            </ul>
-        </div>
+      </div>
+      <div class="footerL">
+        <h3>Buscanos en Instragram:</h3>
+        <ul>
+          <a
+            href="https://instagram.com/industrial.muebleslp?igshid=YmMyMTA2M2Y="
+            ><img src="logos/logoinstagram.png" alt="Instagram" class="ig"
+          /></a>
+        </ul>
+      </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="js/scritp.js"></script>
-    
-
-</body>
-
+  </body>
 </html>
