--- a/index.html
+++ b/index.html
@@ -135,8 +135,21 @@
             </div>
             <div class="d-block" id="htmlCarrito"></div>
           </div>
-          <p class="h5 m-3" id="montoTotal"></p>
+          <div
+            id="footerCart"
+            class="d-flex justify-content-between align-items-center border border-dark border-2 m-3"
+          >
+            <p class="h5 m-3" id="montoTotal"></p>
+            <button type="button" class="btn m-3 comprar">Comprar</button>
+          </div>
         </div>
+
+        <div id="imgZoom" class="mostarImg">
+
+
+
+        </div>
+
       </section>
     </main>
     <footer id="footer" class="container">
