--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </div>
         </div>
 
-        <div id="imgZoom" class="mostarImg">
+        <div id="imgZoom" class="mostarImg d-none">
 
 
 
